--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                     <img src="massms/arrow-right.svg" class="px-2 h-auto w-8 inline-block">
                 </a>
             </div>
-            <div class="inline-block ml-20 md:mr-20">
+            <div class="inline-block ml-20 md:mr-20 md:ml-0">
                 <div class="flex mt-3"><img src="massms/like.svg" class="w-4"><h6 class="text-gray-400 text-sm px-2">No credit card required</h6></div>
                 <div class="flex mt-3"><img src="massms/like.svg" class="w-4"><h6 class="text-gray-400 text-sm px-2">Live chat support</h6></div>
                 <div class="flex mt-3"><img src="massms/like.svg" class="w-4"><h6 class="text-gray-400 text-sm px-2">Quick setup</h6></div>
